--- a/style.css
+++ b/style.css
@@ -87,17 +87,27 @@ header {
 main {
     max-width: 778px;
     width: 100%;
+    padding: 0px 5px;
 }
 main section {
     display: flex;
     margin-top: 64px;
+    gap: 0px 15px;
+}
+@media (max-width: 686px) {
+    main section {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 64px;
+        justify-content: center;
+        
+    }
 }
 main section:nth-last-child(1) {
     margin-bottom: 64px;
 }
 .main_section_img{
     width: 380px;
-    margin-right: 30px;
 }
 .main_section_img_1{
     width: 100%;
